--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
+<!--
+    * Fill Name: index.html v0.1.0
+    * Update: 2020.04.11
+    * Author: developern
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>정다훈의 홈페이지</title>
+    <!-- CSS의 외부 적용 방식 -->
+    <link rel="stylesheet" href="main.css">
+    <!-- CSS의 내부 적용 방식 -->
+    <style>
+        header {
+            color: aqua;
+        }
+    </style>
 </head>
 <body>
-    <header>정다훈의 홈페이지</header>
+    <header style="color: blue;">정다훈의 홈페이지</header>
     <nav>메뉴영역</nav>
     <article>
         <section>첫번째 섹션</section>
