--- a/index.html
+++ b/index.html
@@ -9,17 +9,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>정다훈의 홈페이지</title>
+    <!-- css초기화 / mormalize.css -->
+    <link rel="stylesheet" href="./vendor/normalize.css">
     <!-- CSS의 외부 적용 방식 -->
     <link rel="stylesheet" href="main.css">
-    <!-- CSS의 내부 적용 방식 -->
-    <style>
-        header {
-            color: aqua;
-        }
-    </style>
 </head>
 <body>
-    <header style="color: blue;">정다훈의 홈페이지</header>
+    <header id="test2" class="test">정다훈의 홈페이지</header>
     <nav>메뉴영역</nav>
     <article>
         <section>첫번째 섹션</section>
