--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header id="test2" class="test">정다훈의 홈페이지</header>
-    <nav>메뉴영역</nav>
+    <header>정다훈의 홈페이지</header>
+    <nav>
+        <ul>
+            <li class="logo">정다훈</li>
+            <li><a href="#">메뉴1</a></li>
+            <li><a href="#">메뉴2</a></li>
+            <li><a href="#">메뉴3</a></li>
+        </ul>
+    </nav>
     <article>
         <section>첫번째 섹션</section>
         <section>두번째 섹션</section>
