--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
     * Fill Name: index.html v0.3.0
-    * Update: 2020.04.11
+    * Update: 2020.04.18
     * Author: developern
 -->
 <!DOCTYPE html>
@@ -32,9 +32,23 @@
             <div class="box3">박스3</div>
         </section>
     </article>
-    <article>
-        <section>첫번째 섹션</section>
-        <section>두번째 섹션</section>
+    <article class="article-bg2">
+        <h1>4월 18일 멀티미디어 태그 연습</h1> <br>
+        <h2>img tag 연습</h2>
+        <section>
+            <img class="img-size1" src="./img/geometry-1023846_640.jpg" alt="수학적 이미지">
+            <img class="img-size1 b-radius1" src="./img/geometry-1023846_640.jpg" alt="수학적 이미지">
+            <img class="img-size1 b-radius2" src="./img/geometry-1023846_640.jpg" alt="수학적 이미지">
+            <img class="img-size1 b-radius3" src="./img/geometry-1023846_640.jpg" alt="수학적 이미지">
+            <img class="img-size1 b-radius4" src="./img/geometry-1023846_640.jpg" alt="수학적 이미지">
+        </section>
+        <section>
+            <img class="img-size2" src="./img/geometry-1023846_640.jpg" alt="수학적 이미지">
+            <img class="img-size2 b-radius1" src="./img/geometry-1023846_640.jpg" alt="수학적 이미지">
+            <img class="img-size2 b-radius2" src="./img/geometry-1023846_640.jpg" alt="수학적 이미지">
+            <img class="img-size2 b-radius3" src="./img/geometry-1023846_640.jpg" alt="수학적 이미지">
+            <img class="img-size2 b-radius4" src="./img/geometry-1023846_640.jpg" alt="수학적 이미지">            
+        </section>
         <section>세번째 섹션</section>
     </article>
     <aside>어사이드 영역</aside>
