--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-    * Fill Name: index.html v0.5.0
+    * Fill Name: index.html v0.6.0
     * Update: 2020.04.18
     * Author: developern
 -->
@@ -69,6 +69,43 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/_bXbvycJe3o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     </article>
+    <article class="article-bg4">
+        <h1>4월 24일 테이블 연습</h1>
+        <section>
+            <table>
+                <caption>프런트엔드 개발자</caption>
+                <thead>
+                    <tr>
+                        <th>HTML5</th>
+                        <th>CSS3</th>
+                        <th>Java script</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1-1</td>
+                        <td>1-2</td>
+                        <td>1-3</td>
+                    </tr>
+                    <tr>
+                        <td>2-1</td>
+                        <td>2-2</td>
+                        <td rowspan="2">2-3</td>
+                    </tr>
+                    <tr>
+                        <td>3-1</td>
+                        <td>3-2</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="3">테이블 연습</td>
+                    </tr>
+                </tfoot>
+            </table>
+        </section>
+    </article>
+
     <aside>어사이드 영역</aside>
     <footer>여기는 바닥 역역</footer>
 </body>
