--- a/index.html
+++ b/index.html
@@ -105,6 +105,47 @@
             </table>
         </section>
     </article>
+    <article class="article-bg6">
+        <h1>4월 28일 테이블 과제</h1>
+        <section>
+            <table class="ttb">
+                <thead class="th1">
+                    <tr>
+                        <th colspan="4">테이블 연습</th>
+                    </tr>
+                    <tr>
+                        <th colspan="4">thead 태그 영역</th>
+                    </tr>
+                </thead>
+                <tbody class="tb1">
+                    <tr>
+                        <td rowspan="4">줄합치기</td>
+                        <td colspan="3">칸합치기</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>2</td>
+                        <td>3</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>5</td>
+                        <td>6</td>
+                    </tr>
+                    <tr>
+                        <td>7</td>
+                        <td>8</td>
+                        <td>9</td>
+                    </tr>
+                </tbody>
+                <tfoot class="tf1">
+                    <tr>
+                        <td colspan="4">tfoot태그 영역</td>
+                    </tr>
+                </tfoot>
+            </table>
+        </section>
+    </article>
 
     <aside>어사이드 영역</aside>
     <footer>여기는 바닥 역역</footer>
